[package]
name = "basic-wasm-structure"
description = "A basic structure for CosmWasm contract"
version = "0.1.0"
authors = ["Nguyen The Vinh <nghuyenthevinh@gmail.com>"]
edition = "2018"
repository = "https://github.com/notional-labs/anone"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "0.16.3" }
thiserror = "1.0.30"
schemars = "0.8.8"
serde = "1.0.136"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.3" }
